--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/aos.css">
     <link rel="stylesheet" href="./css/jquery.mb.YTPlayer.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.css?ver=20230112">
 
 
 
@@ -228,6 +228,7 @@
                 </nav>
                 <div class="link"> <i class="xi-bars"></i>
                 </div>
+
             </header>
 
 
@@ -247,6 +248,21 @@
 
 
 
+                <!-- right_banner -->
+                <div class="right_banner">
+                    <ul>
+                        <li><a href="./상담.html">민원상담</a></li>
+                        <li><a href="./서식.html">민원서식</a></li>
+                        <li><a href="./sub.html">민원실안내</a></li>
+                        <li><a href="./guide.html">행정조직</a></li>
+                        <li><a href="./guide.html">일자리종합센터</a></li>
+                        <li><a href="./guide.html">사전정보공표</a></li>
+                        <li><a href="./guide.html">문자알림서비스</a></li>
+                        <li><a href="./guide.html">주택알리미</a></li>
+                    </ul>
+                    <button><i class="xi-angle-right"></i>메뉴</button>
+                </div>
+
 
                 <!-- mainVisual -->
                 <section class="mainVisual">
@@ -256,6 +272,89 @@
                         <p class="txt_img">수영</p>
                     </div>
                 </section>
+
+
+
+
+                <!-- mainLink -->
+                <section id="mainLink">
+                    <ul class="f_inner main_link">
+                        <li>
+                            <a href="./guide.html">
+                                <span>icon</span>
+                            </a>
+                            <strong>Guide
+                            </strong>
+                        </li>
+                        <li>
+                            <a href="./상담.html">
+                                <span>icon</span>
+                            </a>
+                            <strong>민원상담</strong>
+                        </li>
+                        <li>
+                            <a href="./서식.html">
+                                <span>icon</span>
+
+                            </a>
+                            <strong>민원서식</strong>
+                        </li>
+                        <li>
+                            <a href="./sub.html">
+                                <span>icon</span>
+
+                            </a>
+                            <strong>민원실안내</strong>
+                        </li>
+                        <li>
+                            <a href="./sub.html">
+                                <span>icon</span>
+
+                            </a>
+                            <strong>행정조직</strong>
+                        </li>
+                        <li>
+                            <a href="./sub.html">
+                                <span>icon</span>
+
+                            </a>
+                            <strong>사전정보</strong>
+                        </li>
+                        <li>
+                            <a href="./sub.html">
+                                <span>icon</span>
+
+                            </a>
+                            <strong>일자리센터</strong>
+                        </li>
+                        <li>
+                            <a href="./sub.html">
+                                <span>icon</span>
+
+                            </a>
+                            <strong>해수욕장</strong>
+                        </li>
+                        <li>
+                            <a href="./sub.html">
+                                <span>icon</span>
+
+                            </a>
+                            <strong>문자알리미</strong>
+                        </li>
+                        <li>
+                            <a href="./sub.html">
+                                <span>icon</span>
+
+                            </a>
+                            <strong>주정차</strong>
+                        </li>
+
+
+                    </ul>
+                </section>
+
+
+
 
 
                 <!-- main_Art -->
@@ -357,63 +456,89 @@
                                 <h3>주요뉴스 1</h3>
                                 <p>수영구, “지역사회보장협의체 역량강화 컨퍼런스 개최” <br />
                                     위드코로나 시대 협의체의 역할과 방향 제시 </p>
-                                <a href="#!">자세히보기</a>
+                                <a href="./소식.html">자세히보기</a>
                             </div>
                         </figure>
                         <figure class="itm02">
                             <div class="over">
                                 <h3>주요뉴스 2</h3>
                                 <p>수영구“바우”도시가스 안전관리 업체 성품 기탁 </p>
-                                <a href="#!">자세히보기</a>
+                                <a href="./소식.html">자세히보기</a>
                             </div>
                         </figure>
                         <figure class="itm03">
                             <div class="over">
                                 <h3>주요뉴스 3</h3>
                                 <p>수영구 문화예술회 사진회 작품전시회 개최 </p>
-                                <a href="#!">자세히보기</a>
+                                <a href="./소식.html">자세히보기</a>
                             </div>
                         </figure>
                         <figure class="itm04">
                             <div class="over">
                                 <h3>주요뉴스 4</h3>
                                 <p>수영구 한국자유총연맹 사랑의 계절 김치 나누기 </p>
-                                <a href="#!">자세히보기</a>
+                                <a href="./소식.html">자세히보기</a>
                             </div>
                         </figure>
                         <figure class="itm05">
                             <div class="over">
                                 <h3>주요뉴스 5</h3>
                                 <p>부산시「2021년 출산장려정책 추진실적 평가」 최우수상 수상 </p>
-                                <a href="#!">자세히보기</a>
+                                <a href="./소식.html">자세히보기</a>
                             </div>
                         </figure>
                         <figure class="itm06">
                             <div class="over">
                                 <h3>주요뉴스 6</h3>
                                 <p>수영구 경성산업 이웃돕기 성품 기탁 </p>
-                                <a href="#!">자세히보기</a>
+                                <a href="./소식.html">자세히보기</a>
                             </div>
                         </figure>
                     </div>
                 </section>
-
             </main>
 
 
+
+
+
+            <!-- footer -->
             <footer id="footer">
-                <address>
-                    (48305) 부산광역시 수영구 남천동로 100(남천동)
-                </address>
-                <ul class="f_con f_inner">
-                    <li>담당자 : 전정선</li>
-                    <li>팩스번호 : 606-11-45081</li>
-                    <li>Tel : <a href="tel:051-331-3354">051-331-3354</a> </li>
-                    <li> e-mail : <a href="mailto:jjs3354@naver.com"> jjs3354@naver.com</a></li>
-                </ul>
-                <span class="copy">
-                    &copy; COPYRIGHT 2019 SUYEONG-GU. ALL RIGHTS RESERVED.
-                </span>
+                <div class="foot_top">
+                    <div class="left">
+                        <h3 class="foot_img">수영</h3>
+                        <ul class="fm">
+                            <li><a href="">이용약관</a></li>
+                            <li><a href="">문의하기</a></li>
+                            <li><a href="">개인정보 취급방침</a></li>
+                            <li><a href="">방문 예약하기</a></li>
+                            <li><a href="">오시는길</a></li>
+                        </ul>
+                    </div>
+                    <ul class="right">
+                        <li><a href="https://www.instagram.com/" target="_blank"><i class="xi-instagram"></i></a></li>
+                        <li><a href="https://www.youtube.com/" target="_blank"><i class="xi-youtube"></i></a></li>
+                        <li><a href="https://www.naver.com/" target="_blank"><i class="xi-naver"></i></a></li>
+                    </ul>
+                </div>
+
+
+
+
+                <div class="foot_bottom">
+                    <address>
+                        (48305) 부산광역시 수영구 남천동로 100(남천동)
+                    </address>
+                    <ul class="f_con f_inner">
+                        <li>담당자 : 전정선</li>
+                        <li>팩스번호 : 606-11-45081</li>
+                        <li>Tel :<a href="tel:051-331-3354">051-331-3354</a> </li>
+                        <li> e-mail :<a href="mailto:jjs3354@naver.com"> jjs3354@naver.com</a></li>
+                    </ul>
+                    <span class="copy">
+                        &copy; COPYRIGHT 2019 SUYEONG-GU. ALL RIGHTS RESERVED.
+                    </span>
+                </div>
             </footer>
         </div>
 
@@ -422,23 +547,24 @@
 
 
 
+        <!-- toTop -->
+        <div id="toTop">
+            <a href="#!"><i class="xi-arrow-top"></i></a>
+        </div>
 
 
 
 
+        <!-- script -->
+        <script>
 
+            var option = {
+                disable: 'phone',
+            }
 
+            AOS.init(option);
 
-
-
-
-
-
-
-
-
-
-
+        </script>
 </body>
 
 </html>
